[metadata]
name = escape_sequence_fixer
version = 0.0.1
description = A simple script to fix invalid escape strings.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tirkarthi/escape_sequence_fixer
author = Karthikeyan Singaravelan
author_email = tir.karthi@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = escape_sequence_fixer
install_requires = python_version>"3.4"
python_requires = >=3.4

[options.entry_points]
console_scripts =
    escape_sequence_fixer=escape_sequence_fixer:main

[bdist_wheel]
universal = True